--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,9 @@
     <style>
       body {
         padding : 0;
-        margin : 0;
+        margin : 0 auto;
+        max-width: 425px;
+    
       }
     </style>
   </head>
