--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,8 @@
         padding : 0;
         margin : 0 auto;
         max-width: 425px;
-    
+        touch-action: pan-y;
+        -webkit-tap-highlight-color:transparent;
       }
     </style>
   </head>
