--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>비상</title>
+    <link rel="stylesheet" href="odometer-theme-default.css" />
     <style>
       body {
         padding : 0;
