--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,6 +31,7 @@
         padding : 0;
         margin : 0 auto;
         max-width: 425px;
+        max-height : 2000px;
         touch-action: pan-y;
         -webkit-tap-highlight-color:transparent;
       }
