--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,9 +36,10 @@
         padding : 0;
         margin : 0 auto;
         max-width: 450px;
-        max-height : 2000px;
+        height : 100vh;
         touch-action: pan-y pan-x;
         -webkit-tap-highlight-color:transparent;
+        
       }
       img {
         touch-action: pan-y pan-x;
@@ -47,6 +48,16 @@
         touch-action: pan-y pan-x;
       }
     </style>
+    <script>
+      let vh = window.innerHeight * 0.01;
+      console.log(vh);
+      document.documentElement.style.setProperty("--vh", `${vh}px`);
+      window.addEventListener("resize", () => {
+      console.log("resize");
+      let vh = window.innerHeight * 0.01;
+      document.documentElement.style.setProperty("--vh", `${vh}px`);
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
