--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,6 +33,7 @@
     <title>비상</title>
     <style>
       body {
+        * { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
         padding : 0;
         margin : 0 auto;
         max-width: 450px;
@@ -56,6 +57,7 @@
         document.documentElement.style.setProperty("--vh", `${vh}px`);
       });
     </script>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
