--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,6 +32,11 @@
     -->
     <title>비상</title>
     <style>
+      @import url(https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+      @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+      @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css);
+      @import url(https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap);
+      @import url(https://fonts.googleapis.com/css?family=Roboto);
       body {
         padding : 0;
         margin : 0 auto;
