--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,7 @@
         height : 100vh;
         touch-action: pan-y pan-x;
         -webkit-tap-highlight-color:transparent;
+        background: #fff;
         
       }
       img {
